--- a/Telecom_X_parte2.ipynb
+++ b/Telecom_X_parte2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1iQzGdCXfwARQ4KPTJdd-QwQLPUjIm4Re",
-      "authorship_tag": "ABX9TyMCrGBGifgHiThjuNvaCPlp",
+      "authorship_tag": "ABX9TyPrE09NZCLsGv3iI+sR7/qW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1491,12 +1491,13 @@
       "source": [
         "import numpy as np\n",
         "\n",
-        "#ejecuto una a una las lineas siguientes buscando informacion del error\n",
+        "#ejecuto una a una las lineas siguientes buscando informacion del error:\n",
         "#print(np.isinf(X).sum()) #verifica si tiene valores infinitos, no tiene\n",
         "print(X.isna().sum())    #si son nulos: tengo 11 del total.day y 11 del charges.total\n",
         "#print((X == \"\").sum())   #string vacios, no hay\n",
         "#print((X == \" \").sum())  #espacios en blanco, no hay\n",
-        "#print(X.dtypes)          #tipo datos"
+        "#print(X.dtypes)          #tipo datos\n",
+        "#al no ser más del 5% del total se pueden poner en cero los valores(los 11) o eliminarlos directamente, eso depende del análisis"
       ],
       "metadata": {
         "colab": {
@@ -1549,7 +1550,19 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#\n",
+        "from imblearn.over_sampling import SMOTE\n",
+        "\n",
+        "X = df.drop(\"Churn_Yes\", axis=1)\n",
+        "y = df[\"Churn_Yes\"]\n",
+        "\n",
+        "imputer = SimpleImputer(strategy=\"constant\", fill_value=0)\n",
+        "X_imputed = imputer.fit_transform(X)\n",
+        "\n",
+        "smote = SMOTE(random_state=42)\n",
+        "X_res, y_res = smote.fit_resample(X_imputed, y)"
+      ],
       "metadata": {
         "id": "5DJeBzkYMJ3O"
       },
