--- a/Telecom_X_parte2.ipynb
+++ b/Telecom_X_parte2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1iQzGdCXfwARQ4KPTJdd-QwQLPUjIm4Re",
-      "authorship_tag": "ABX9TyN6Ntl4H3sT2jXR03S5e/h1",
+      "authorship_tag": "ABX9TyMsGyDME1mUWkjOIQiJTvbY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4336,49 +4336,34 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Recomendaciones:\n",
-        "Análisis de Churn de Clientes\n",
-        "Descripción del Proyecto\n",
-        "Este proyecto realiza un análisis exploratorio y modelado predictivo para identificar los factores que influyen en la rotación (churn) de clientes en la empresa de telecomunicaciones Telecom X. El objetivo es construir modelos que permitan predecir qué clientes son propensos a abandonar el servicio.\n",
+        "# RECOMENDACIONES:\n",
+        "Basado en el análisis y modelado realizado en el notebook, podemos extraer las siguientes conclusiones principales:\n",
         "\n",
-        "Origen de Datos\n",
-        "Los datos utilizados en este análisis provienen del archivo df_limpo.csv. Este archivo contiene información detallada sobre los clientes, incluyendo datos demográficos, servicios contratados, información de cuenta y estado de churn entre otros.\n",
+        "1. Características de los Datos:\n",
+        "   El conjunto de datos contiene información variada sobre los clientes, incluyendo datos demográficos, servicios contratados y detalles de la cuenta. Se identificaron y manejaron valores nulos en las columnas \"Total.Day\" y \"account.Charges.Total\".\n",
         "\n",
-        "Análisis y Preprocesamiento de Datos\n",
-        "1. Carga de Datos: Los datos se cargaron utilizando la librería pandas.\n",
-        "2. Exploración Inicial: Se realizó una exploración inicial para entender la estructura de los datos, tipos de variables y presencia de valores nulos.\n",
-        "3. Limpieza de Datos: Se eliminó la columna customerID ya que no es relevante para el análisis predictivo. Se imputaron los valores nulos en las columnas Total.Day y account.Charges.Total eliminando las filas correspondientes.\n",
-        "4. Codificación de Variables Categóricas: Las variables categóricas se transformaron utilizando One-Hot Encoding para ser utilizadas en los modelos. Se manejaron los casos de variables con tres categorías (Sí, No, No service) reemplazando \"No internet service\" por \"No\" antes de la codificación.\n",
-        "5. Análisis de Correlación: Se calculó la matriz de correlación para visualizar la relación entre las variables, prestando especial atención a la correlación con la variable objetivo (Churn_Yes). Se visualizó una matriz filtrada con variables que tienen una correlación absoluta mayor o igual a 0.2 con la variable objetivo.\n",
-        "6. Análisis de Multicolinealidad (VIF): Se realizó un análisis del Factor de Inflación de Varianza (VIF) para identificar y mitigar la multicolinealidad entre las variables predictoras. Se eliminaron columnas con VIF alto (phone.PhoneService_Yes, phone.MultipleLines_No phone service, Total.Day, internet.InternetService_No, account.Charges.Total) para mejorar la estabilidad del modelo.\n",
-        "7. Escalado de Datos: Las variables numéricas fueron escaladas utilizando StandardScaler para asegurar que tengan una media de 0 y una desviación estándar de 1, lo cual es importante para algunos modelos.\n",
-        "8. Balanceo de Clases: Dado que el conjunto de datos de churn suele estar desbalanceado (menos clientes que abandonan que los que no), se aplicó la técnica SMOTE (Synthetic Minority Over-sampling Technique) en el conjunto de entrenamiento para crear instancias sintéticas de la clase minoritaria y balancear el dataset.\n",
-        "## Modelado Predictivo\n",
-        "Se entrenaron dos modelos de clasificación para predecir el churn de clientes:\n",
+        "2. Correlación con el Churn:\n",
+        "   El análisis de correlación reveló que algunas variables tienen una relación más fuerte con el churn que otras. Las variables con mayor correlación absoluta con \"Churn_Yes\" incluyen: \"customer.tenure\", \"internet.InternetService_Fiber optic\", \"internet.InternetService_No\", \"account.Contract_Two year\", y \"account.PaymentMethod_Electronic check\".\n",
+        "   Esto sugiere que el tiempo que un cliente lleva con la empresa, el tipo de servicio de internet, el tipo de contrato y el método de pago son factores importantes a considerar para predecir el abandono.\n",
         "\n",
-        "*Regresión Logística: Un modelo lineal que estima la probabilidad de que un cliente abandone el servicio.\n",
+        "3. Multicolinealidad:\n",
+        "   El análisis VIF ayudó a identificar y eliminar variables con alta multicolinealidad, lo que es crucial para construir modelos más estables e interpretables. La eliminación de variables como \"Total.Day\" y \"account.Charges.Total\" (debido a su alta correlación con customer.tenure y account.Charges.Monthly) y algunas variables dummy redundantes fue un paso importante en este proceso.\n",
         "\n",
-        "*Random Forest Classifier: Un modelo de conjunto basado en árboles de decisión que puede capturar interacciones no lineales entre las variables.\n",
+        "4. Rendimiento de los Modelos:\n",
+        "   Ambos modelos, Regresión Logística y Random Forest, mostraron una capacidad razonable para predecir el churn.\n",
         "\n",
-        "Ambos modelos se entrenaron con el conjunto de datos balanceado (resultado de aplicar SMOTE) y se evaluaron en el conjunto de prueba original (no balanceado) para obtener métricas de rendimiento realistas.\n",
+        "*La Regresión Logística tuvo un mejor rendimiento en términos de ROC AUC (0.85), lo que indica una buena capacidad para discriminar entre clientes que abandonan y los que no. Además, mostró un alto recall para la clase 'Churn' (0.81), lo que significa que es efectiva identificando a la mayoría de los clientes que finalmente se van. Sin embargo, su precisión para la clase 'Churn' fue menor (0.52), lo que resultó en un número significativo de falsos positivos.\n",
         "\n",
-        "## Evaluación de Modelos\n",
-        "La evaluación de los modelos se basó en las siguientes métricas:\n",
+        "*El Random Forest tuvo una mayor precisión general (0.78) y fue mejor prediciendo correctamente a los clientes que no abandonan (verdaderos negativos). No obstante, su recall para la clase 'Churn' (0.60) fue menor que el de la Regresión Logística, lo que indica que identificó a una menor proporción de clientes que realmente abandonaron.\n",
         "\n",
-        "*Accuracy (Precisión General): Proporción de predicciones correctas.\n",
+        "5. Implicaciones para la Estrategia de Retención:\n",
+        "   Los resultados sugieren que la empresa debería centrarse en los clientes con contratos a corto plazo (Month-to-month), aquellos que utilizan el servicio de internet de fibra óptica y los que pagan electrónicamente, ya que estas características están asociadas con una mayor propensión al churn. Además, los clientes con menor antigüedad (customer.tenure) también tienen una mayor probabilidad de irse.\n",
         "\n",
-        "*ROC AUC (Área bajo la Curva ROC): Mide la capacidad del modelo para distinguir entre las clases. Un valor más alto indica una mejor capacidad discriminatoria.\n",
-        "\n",
-        "*Confusion Matrix: Tabla que resume el número de predicciones correctas e incorrectas para cada clase.\n",
-        "\n",
-        "*Classification Report: Proporciona métricas clave como Precisión, Recall (Sensibilidad), F1-score y soporte para cada clase.\n",
-        "\n",
-        "Los resultados de la evaluación mostraron que ambos modelos tienen un rendimiento razonable. La Regresión Logística tuvo un ROC AUC ligeramente más alto, mientras que el Random Forest tuvo una mayor precisión general.\n",
-        "\n",
-        "La elección del modelo final dependerá de las prioridades del negocio (por ejemplo, si es más importante minimizar los falsos negativos o los falsos positivos).\n"
+        "En general, el proyecto ha permitido identificar factores clave asociados al churn de clientes y desarrollar modelos predictivos que pueden ser utilizados para identificar clientes en riesgo y diseñar estrategias de retención dirigidas.\n",
+        "La elección del modelo a implementar dependerá de la prioridad del negocio: si es más crítico identificar a la mayor cantidad posible de clientes que se van (aunque haya más falsos positivos), la Regresión Logística podría ser preferible. Si se busca una mayor precisión general y minimizar la predicción errónea de clientes que no se van, el Random Forest podría ser una mejor opción."
       ],
       "metadata": {
-        "id": "6IibJW_EC-gB"
+        "id": "VdjicEziF18c"
       }
     }
   ]
